[package]
name = "akusesu"
version = "0.1.0"
authors = ["Momiji <nekomarisakirisame@gmail.com>"]
edition = "2018"
include = ["/src/**/*", "/Cargo.toml", "/build.rs", "/README.md"]
build = "build.rs"

[dependencies]
sysinfo = "^0.15.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "^0.3.8", features = ["consoleapi", "minwindef", "winuser"] }
kernel32-sys = "^0.2.2"

[features]
default = [
    "memory"
]

memory = []